--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "\n",
     "from baselines.FixTimeRegressor import FixTimeRegressor\n",
     "\n",
-    "from datetime import datetime\n",
     "import pandas as pd\n",
     "import tqdm\n",
     "import numpy as np"
@@ -19,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "participant_series_id = '038441c925bb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +84,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:12<00:00,  2.52s/it]"
+      "100%|██████████| 5/5 [00:46<00:00,  9.33s/it]"
      ]
     },
     {
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,28 +125,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2000000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2000000/2000000 [02:23<00:00, 13935.99it/s]\n"
+      "100%|██████████| 389880/389880 [00:40<00:00, 9636.50it/s] \n"
      ]
     }
    ],
    "source": [
-    "results = regressor.predict(dataframe.head(2_000_000))"
+    "results = regressor.predict(dataframe[dataframe['series_id'] == participant_series_id])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.to_csv('submission.csv', sep=',', index=False)"
+    "results.to_csv('../results/baseline_submission.csv', sep=',', index=False)"
    ]
   }
  ],
@@ -158,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
