--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,27 @@
     "\n",
     "import pandas as pd\n",
     "import tqdm\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import pyarrow.parquet as pq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_series = pd.read_parquet('../data/raw/train_series.parquet')"
+    "train_file = pq.ParquetFile('../data/raw/train_series.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "participant_series_id = '038441c925bb'"
+    "participant_series_ids = ['038441c925bb', '03d92c9f6f8a', '0402a003dae9', '04f547b8017d', '05e1944c3818', '08db4255286f']"
    ]
   },
   {
@@ -70,41 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Memory usage before cleanup is 3416.54 MB\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:41<00:00,  8.38s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Memory usage after cleanup is 2196.35 MB\n",
-      "Memory usage improved by 35.71%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "1953it [07:34,  4.29it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataframe = reduce_memory(train_series)"
+    "dataframe = pd.DataFrame()\n",
+    "for batch in tqdm.tqdm(train_file.iter_batches()):\n",
+    "    df = batch.to_pandas()\n",
+    "    dataframe = pd.concat([dataframe, df.loc[df['series_id'].isin(participant_series_ids)]], axis=0)"
    ]
   },
   {
@@ -118,24 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 389880/389880 [01:21<00:00, 4779.38it/s]\n"
+      "100%|██████████| 2989980/2989980 [11:59<00:00, 4152.83it/s]\n"
      ]
     }
    ],
    "source": [
-    "results = regressor.predict(dataframe[dataframe['series_id'] == participant_series_id])"
+    "results = regressor.predict(dataframe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
