added new base line for timeranges

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "sys.path.append('../')\n",
     "\n",
     "from baselines.FixTimeRegressor import FixTimeRegressor\n",
+    "from baselines.TimeRangeRegressor import TimeRangeRegressor\n",
     "\n",
     "import pandas as pd\n",
     "import tqdm\n",
@@ -20,7 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regressor = TimeRangeRegressor(['05:00:00', '08:00:00'], ['21:00:00', '23:59:59'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "participant_series_ids = ['038441c925bb', '03d92c9f6f8a', '0402a003dae9', '04f547b8017d', '05e1944c3818', '08db4255286f']"
+    "participant_series_ids = ['038441c925bb', '03d92c9f6f8a', '0402a003dae9', '04f547b8017d', '05e1944c3818', '08db4255286f']\n",
+    "train_series = pd.DataFrame()\n",
+    "for series in participant_series_ids:\n",
+    "  train_series = pd.concat([train_series, pd.read_parquet(\"../data/raw/train_series.parquet\", filters=[('series_id','=',series)])], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,27 +85,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframe = pd.DataFrame()\n",
+    "# for batch in tqdm.tqdm(train_file.iter_batches()):\n",
+    "#     df = batch.to_pandas()\n",
+    "#     dataframe = pd.concat([dataframe, df.loc[df['series_id'].isin(participant_series_ids)]], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1953it [07:34,  4.29it/s]\n"
+      "100%|██████████| 726105/726105 [00:41<00:00, 17499.18it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>series_id</th>\n",
+       "      <th>step</th>\n",
+       "      <th>event</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>038441c925bb</td>\n",
+       "      <td>10680</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>038441c925bb</td>\n",
+       "      <td>10980</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>038441c925bb</td>\n",
+       "      <td>11760</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>038441c925bb</td>\n",
+       "      <td>28620</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>038441c925bb</td>\n",
+       "      <td>44940</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_id     series_id   step   event  score\n",
+       "0       0  038441c925bb  10680  wakeup    0.5\n",
+       "1       1  038441c925bb  10980  wakeup    0.5\n",
+       "2       2  038441c925bb  11760  wakeup    0.5\n",
+       "3       3  038441c925bb  28620  wakeup    0.5\n",
+       "4       4  038441c925bb  44940  wakeup    0.5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe = pd.DataFrame()\n",
-    "for batch in tqdm.tqdm(train_file.iter_batches()):\n",
-    "    df = batch.to_pandas()\n",
-    "    dataframe = pd.concat([dataframe, df.loc[df['series_id'].isin(participant_series_ids)]], axis=0)"
+    "results = regressor.predict(train_series)\n",
+    "\n",
+    "results.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.to_csv('../results/baseline_submission_1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,24 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2989980/2989980 [11:59<00:00, 4152.83it/s]\n"
+      "100%|██████████| 346/346 [00:00<00:00, 16227.72it/s]\n"
      ]
     }
    ],
    "source": [
-    "results = regressor.predict(dataframe)"
+    "results = regressor.predict(train_series)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
