--- a/notebooks/scoring.ipynb
+++ b/notebooks/scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "baseline_submissions = pd.read_csv('../results/baseline_submission.csv')"
+    "baseline_submissions = pd.read_csv('../results/baseline_submission.csv')\n",
+    "baseline_submissions_1 = pd.read_csv('../results/baseline_submission_1.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,19 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.005804189795769587\n"
+      "0.005804189795769587\n",
+      "0.0077872133994582975\n"
      ]
     }
    ],
    "source": [
-    "print(competition_score(needed_events, baseline_submissions))"
+    "print(competition_score(needed_events, baseline_submissions))\n",
+    "print(competition_score(needed_events, baseline_submissions_1))"
    ]
   }
  ],
@@ -91,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
