--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "regressor = TimeRangeRegressor(['05:00:00', '08:00:00'], ['21:00:00', '23:59:59'])\n"
+    "regressor = TimeRangeRegressor(['05:00:00', '08:00:00'], ['21:00:00', '23:59:59'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,60 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reduce_memory(df):\n",
-    "    start_memory = df.memory_usage().sum() / 1024**2\n",
-    "    print(f'Memory usage before cleanup is {start_memory:.2f} MB')\n",
-    "    \n",
-    "    for col in tqdm.tqdm(df.columns):\n",
-    "        column_type = df[col].dtype\n",
-    "        if column_type != object:\n",
-    "            max_value = df[col].max()\n",
-    "            min_value = df[col].min()\n",
-    "            if str(column_type) == 'uint32':\n",
-    "                if min_value > np.iinfo(np.uint8).min and max_value < np.iinfo(np.uint8).max:\n",
-    "                    df[col] = df[col].astype(np.uint8)\n",
-    "                elif min_value > np.iinfo(np.uint16).min and max_value < np.iinfo(np.uint16).max:\n",
-    "                    df[col] = df[col].astype(np.uint16)\n",
-    "            elif str(column_type) == 'float32':\n",
-    "                if min_value > np.finfo(np.float16).min and max_value < np.finfo(np.float16).max:\n",
-    "                    df[col] = df[col].astype(np.float16)\n",
-    "        df['series_id'] = df['series_id'].astype('category')\n",
-    "\n",
-    "    end_memory = df.memory_usage().sum() / 1024**2\n",
-    "    print(f'Memory usage after cleanup is {end_memory:.2f} MB')\n",
-    "    \n",
-    "    improvement = (start_memory - end_memory) / start_memory * 100\n",
-    "    print(f'Memory usage improved by {improvement:.2f}%')\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataframe = pd.DataFrame()\n",
-    "# for batch in tqdm.tqdm(train_file.iter_batches()):\n",
-    "#     df = batch.to_pandas()\n",
-    "#     dataframe = pd.concat([dataframe, df.loc[df['series_id'].isin(participant_series_ids)]], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 726105/726105 [00:41<00:00, 17499.18it/s]\n"
+      "100%|██████████| 726105/726105 [00:45<00:00, 15908.18it/s]\n"
      ]
     },
     {
@@ -140,7 +94,7 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>038441c925bb</td>\n",
-       "      <td>10680</td>\n",
+       "      <td>11220</td>\n",
        "      <td>wakeup</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -148,7 +102,7 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>038441c925bb</td>\n",
-       "      <td>10980</td>\n",
+       "      <td>28200</td>\n",
        "      <td>wakeup</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -156,7 +110,7 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>038441c925bb</td>\n",
-       "      <td>11760</td>\n",
+       "      <td>44400</td>\n",
        "      <td>wakeup</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -164,7 +118,7 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>038441c925bb</td>\n",
-       "      <td>28620</td>\n",
+       "      <td>45360</td>\n",
        "      <td>wakeup</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -172,7 +126,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>038441c925bb</td>\n",
-       "      <td>44940</td>\n",
+       "      <td>45900</td>\n",
        "      <td>wakeup</td>\n",
        "      <td>0.5</td>\n",
        "    </tr>\n",
@@ -182,14 +136,14 @@
       ],
       "text/plain": [
        "   row_id     series_id   step   event  score\n",
-       "0       0  038441c925bb  10680  wakeup    0.5\n",
-       "1       1  038441c925bb  10980  wakeup    0.5\n",
-       "2       2  038441c925bb  11760  wakeup    0.5\n",
-       "3       3  038441c925bb  28620  wakeup    0.5\n",
-       "4       4  038441c925bb  44940  wakeup    0.5"
+       "0       0  038441c925bb  11220  wakeup    0.5\n",
+       "1       1  038441c925bb  28200  wakeup    0.5\n",
+       "2       2  038441c925bb  44400  wakeup    0.5\n",
+       "3       3  038441c925bb  45360  wakeup    0.5\n",
+       "4       4  038441c925bb  45900  wakeup    0.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 346/346 [00:00<00:00, 16227.72it/s]\n"
+      "100%|██████████| 346/346 [00:00<00:00, 13870.11it/s]\n"
      ]
     }
    ],
@@ -237,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
