--- a/notebooks/train-test-split.ipynb
+++ b/notebooks/train-test-split.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "train_series.to_parquet('../data/processed/train_series_split.parquet')\n",
-    "train_events.to_csv('../data/processed/train_events_split.csv')"
+    "train_events.to_csv('../data/processed/train_events_split.csv', index=False)"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "validation_series.to_parquet('../data/processed/validation_series_split.parquet')\n",
-    "validation_events.to_csv('../data/processed/validation_events_split.csv')"
+    "validation_events.to_csv('../data/processed/validation_events_split.csv', index=False)"
    ]
   }
  ],
