fix train-test split

--- a/notebooks/train-test-split.ipynb
+++ b/notebooks/train-test-split.ipynb
@@ -76,12 +76,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_series_ids, validation_series_ids = train_test_split(series_ids, test_size=0.8, random_state=RANDOM_STATE)"
+    "train_series_ids, validation_series_ids = train_test_split(series_ids, test_size=0.2, random_state=RANDOM_STATE)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1409f24a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "215"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_series_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "33e9555f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(validation_series_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6f7a522f",
    "metadata": {},
    "outputs": [],
@@ -92,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "a68668d1",
    "metadata": {},
    "outputs": [],
@@ -111,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "92ccbf10",
    "metadata": {},
    "outputs": [],
@@ -122,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0b3ecfde",
    "metadata": {},
    "outputs": [],
